--- a/package.json
+++ b/package.json
@@ -7,10 +7,29 @@
   "scripts": {
     "build": "webpack"
   },
-  "dependencies": {
-    "webpack": "4.26.0"
-  },
   "devDependencies": {
-    "webpack-cli": "^3.1.2"
+    "babel-core": "6.26.3",
+    "babel-loader": "8.0.4",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-imports": "1.5.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react-app": "6.1.0",
+    "copy-webpack-plugin": "4.6.0",
+    "css-loader": "1.0.1",
+    "file-loader": "2.0.0",
+    "html-webpack-plugin": "3.1.0",
+    "mini-css-extract-plugin": "0.4.4",
+    "sass-loader": "7.1.0",
+    "style-loader": "0.23.1",
+    "sw-precache-webpack-plugin-loader": "1.0.2",
+    "uglifyjs-webpack-plugin": "2.0.1",
+    "url-loader": "1.1.2",
+    "webpack": "4.25.1",
+    "webpack-bundle-analyzer": "3.0.3",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "3.1.10"
+  },
+  "dependencies": {
+    "node-sass": "^4.10.0"
   }
 }
